@@ -2,9 +2,11 @@ package com.redbeeacademy.algoritmostest.Lista;
 
 import com.redbeeacademy.algoritmostest.Lista.EjercicioCine.Cine;
 import com.redbeeacademy.algoritmostest.Lista.EjercicioCine.Persona;
+import com.redbeeacademy.algoritmostest.Lista.EjercicioCine.Resultado;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -31,7 +33,7 @@ class CineTest {
     @Test
     @DisplayName("Tests happy path cantidad personas")
     public void testHappyPathCantidadPersonas() {
-       Persona  result = Cine.cantidadPersonas(List.of(new Persona(30), new Persona(17), new Persona(8), new Persona(18) ));
+       Resultado result = Cine.cantidadPersonas(List.of(new Persona(30), new Persona(17), new Persona(8), new Persona(18) ));
         //assertNotNull(result, "The result cannot be null");
         assertEquals(1, result.getCantNiños());
         assertEquals(1, result.getCantAdolesc());
@@ -41,9 +43,9 @@ class CineTest {
     @Test
     @DisplayName("Test when null values are sent cantidad personas")
     public void testNullValuesCantidadPersonas() {
-        Persona result = Cine.cantidadPersonas(List.of(new Persona(30), null, new Persona(8), new Persona(18) ));  // consultar cuál es el problema.-
+        Resultado result = Cine.cantidadPersonas(Arrays.asList(new Persona(30), null, new Persona(8), new Persona(18) ));  // consultar cuál es el problema.-
         assertNotNull(result, "The result cannot be null");
-        assertEquals(1, result.getCantNiños());
+        assertEquals(1, ((Resultado) result).getCantNiños());
         assertEquals(0, result.getCantAdolesc());
         assertEquals(2, result.getCantAdult());
     }
@@ -59,7 +61,7 @@ class CineTest {
     @Test
     @DisplayName("Test when null values are sent promedio edad")
     public void testNullValuesPromedioEdad() {
-        Double result = Cine.promedioEdad(List.of(new Persona(30), null, new Persona(8), new Persona(18) ));  // consultar cuál es el problema.-
+        Double result = Cine.promedioEdad(Arrays.asList(new Persona(30), null, new Persona(8), new Persona(18) ));  // consultar cuál es el problema.-
         assertNotNull(result, "The result cannot be null");
         assertEquals(18.66, result);
     }
